@@ -66,9 +66,6 @@ open_serial (char* devfile)
 	int fd;
 	fd = open (devfile, O_RDWR | O_NOCTTY | O_NONBLOCK);
 
-	if (fd == -1)
-		return -1;
-
 	return fd;
 }
 
@@ -128,10 +125,10 @@ write_serial (int fd, guchar *buffer, int offset, int count, int timeout)
 	return 0;
 }
 
-void
+int
 discard_buffer (int fd, gboolean input)
 {
-	tcflush(fd, input ? TCIFLUSH : TCOFLUSH);
+	return tcflush(fd, input ? TCIFLUSH : TCOFLUSH);
 }
 
 gint32
@@ -151,7 +148,9 @@ set_attributes (int fd, int baud_rate, MonoParity parity, int dataBits, MonoStop
 {
 	struct termios newtio;
 
-	tcgetattr (fd, &newtio);
+	if (tcgetattr (fd, &newtio) == -1)
+		return FALSE;
+
 	newtio.c_cflag |=  (CLOCAL | CREAD);
 	newtio.c_lflag &= ~(ICANON | ECHO | ECHOE | ECHOK | ECHONL | ISIG | IEXTEN );
 	newtio.c_oflag &= ~(OPOST);
@@ -160,6 +159,9 @@ set_attributes (int fd, int baud_rate, MonoParity parity, int dataBits, MonoStop
 	/* setup baudrate */
 	switch (baud_rate)
 	{
+	case 460800:
+	    baud_rate = B460800;
+	    break;
 	case 230400: 
 	    baud_rate = B230400;
 	    break;
@@ -398,10 +400,10 @@ set_signal (int fd, MonoSerialSignal signal, gboolean value)
 	return 1;
 }
 
-void
+int
 breakprop (int fd)
 {
-	tcsendbreak (fd, 0);
+	return tcsendbreak (fd, 0);
 }
 
 gboolean
